# asteroids-study

./: .gitignore  CMakeLists.txt  NOTES.md  README.md
src/: CMakeLists.txt  component.cpp  component.h  component_collision.cpp  component_collision.h  component_draw.cpp  component_draw.h  component_input.cpp  component_input.h  component_physics.cpp  component_physics.h  game.cpp  game.h  game_hud.cpp  game_hud.h  game_hud_element.cpp  game_hud_element.h  gameobject.cpp  gameobject.h  gameobject_asteroid.cpp  gameobject_asteroid.h  gameobject_ship.cpp  gameobject_ship.h  main.cpp  math.h  medialayer.cpp  medialayer.h  medialayer_sdl.cpp  medialayer_sdl.h  medialayer_sdl_texture.cpp  medialayer_sdl_texture.h  randomnumber.h
src/medialayer/: medialayer_sdl.h
tests/: CMakeLists.txt  catch2main.hpp
